--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
 <!-- Write your code here! -->
+<!DOCTYPE HTML>
+    <html lang="en">
+        <head>
+            <meta charset="UTF-8"></meta>
+            <meta name="viewport" content="width=device-width, initial-scale=1.0"></meta>
+            <meta http-equiv="X-UA-Compatible" content="ie=edge"></meta>
+            <title>Introduction to the DOM Lab</title>
+        </head>
+        <body>
+            <h1>My HTML adventure</h1>
+            <p>
+                <strong>
+
+                </strong>
+                <em></em>
+                <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">
+            </p>
+
+            <table></table>
+        </body>
+    </html>
